# pomodoro

./: .gitignore  Makefile  README.md  notes.md  platformio.ini  pyproject.toml
docs/: ESP32-Waveshare-Setup.md  display_wiring.md
scripts/: gen_assets.py
src/: GxEPD2_display_selection_new_style.h  anniversary.h  button.cpp  button.h  checkbox.cpp  checkbox.h  debug.h  defs.h  gfx_utils.cpp  gfx_utils.h  icon.h  icon_provider.cpp  icon_provider.h  icons.h  images.h  led.cpp  led.h  lpe.h  main.cpp  main.cpp.display-test.bak  menu.cpp  menu.h  preferences_manager.cpp  preferences_manager.h  splashscreen.cpp  splashscreen.h  statistics.cpp  statistics.h  strings.cpp  strings.h  timer.cpp  timer.h
src/fonts/: FunnelDisplay_Bold18pt7b.h  FunnelDisplay_Bold24pt7b.h  FunnelDisplay_Bold32pt7b.h  FunnelDisplay_Bold48pt7b.h  FunnelDisplay_Bold60pt7b.h  FunnelDisplay_Regular14pt7b.h  HelvetiPixel16pt7b.h  HelvetiPixel24pt7b.h
src/icons/: icons.cpp
src/images/: image_bg_bubble.h  image_bg_cat.h  image_bg_lpe_bubble.h  image_bg_lpehacker_bubble.h  image_bg_pablo.h  image_bg_splash.h  image_bg_stonks.h  image_bg_what_a_week.h
src/states/: timer_running.cpp  timer_running_break.cpp  timer_selecting_preset.cpp  timer_waiting_for_confirmation.cpp
stl/: Pomodoro - Cover.stl  Pomodoro - Housing.stl  Pomodoro - Knob.stl  Pomodoro - LEDCase.stl
